# Models/Dto/Response/UserResponseSimpleDto.cs
@@ -1,0 +1,9 @@
+namespace Winter.Models.Dto.Response;
+
+public record UserResponseSimpleDto(
+  int Id,
+  string Email,
+  string FirstName,
+  string LastName,
+  string Phone
+);
